# traineeship

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: __init__.py  author.py  book.py  city.py  client.py  genre.py  order.py  step.py
app/models/associations/: __init__.py  book.py  order_book.py  order_step.py
app/shared/: cache.py  config.py  logger.py
app/shared/database/: helper.py  models.py
app/shared/database/migrations/: env.py
app/shared/database/migrations/versions/: 52d31e93e59e_create_table.py  d72077b7dae9_change_total_to_biginteger.py
app/spimex_api/: config.py  logger.py  main.py  repository.py  services.py
app/spimex_api/api/: dependencies.py  schemas.py
app/spimex_api/api/routers/: cache.py  trading_results.py
app/spimex_parser/: client.py  config.py  extractors.py  logger.py  main.py  parsers.py
app/spimex_parser/database/: helper.py  models.py  repository.py
app/spimex_parser/database/migrations/: env.py
app/spimex_parser/database/migrations/versions/: a51ed10b6a4f_create_table.py
app/spimex_parser/domain/: dto.py  extractors.py
app/spimex_parser/infrastructure/: http_client.py
app/spimex_parser/infrastructure/database/: helper.py  models.py
app/spimex_parser/infrastructure/database/migrations/: env.py
app/spimex_parser/infrastructure/database/migrations/versions/: 824ca5f7c1ac_create_table.py
app/spimex_parser/pipeline/: context.py  usecase.py
app/spimex_parser/pipeline/workers/: __init__.py  base.py  db_saving.py  file_download.py  file_processing.py  link_pagination.py
app/spimex_parser/services/file_processing/: __init__.py  base.py  dispatcher.py  pdf_processor.py  xls_processor.py
tests/: .env.test  conftest.py  factories.py  test_api.py  test_repository.py  test_services.py
