# ==============================================================================
# PROJECT CONFIGURATION
# ==============================================================================

[project]
name = "traineeship"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pdfplumber>=0.11.10",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.4",
    "uvicorn[standard]>=0.51.0",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "alembic>=1.18.5",
    "factory-boy>=3.3.1",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.26.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.20",
    "testcontainers[postgres]>=4.14.2",
    "types-tqdm>=4.68.0.20260608",
    "types-xlrd>=2.0.0.20260518",
]
idea = [
    "pip>=26.1.2",
]


# ==============================================================================
# TOOL: RUFF (Global Settings)
# ==============================================================================

[tool.ruff]
line-length = 120
target-version = "py312"
force-exclude = true

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]


# ------------------------------------------------------------------------------
# Linter Settings (ruff check)
# ------------------------------------------------------------------------------

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "T10",
    "SIM",
    "RUF",
]
ignore = [
    "RUF001",
    "RUF002",
    "B027",
]

[tool.ruff.lint.isort]
known-first-party = ["shared", "spimex_api", "spimex_parser"]
lines-after-imports = 2

# ------------------------------------------------------------------------------
# Formatter Settings (ruff format)
# ------------------------------------------------------------------------------

[tool.ruff.format]
line-ending = "lf"
nested-string-quote-style = "preferred"


# ==============================================================================
# TOOL: PYREFLY (Global Settings)
# ==============================================================================

[tool.pyrefly]
project-includes = ["app"]
project-excludes = ["app/shared/database/models.py"]
search-path = ["app"]
site-package-path = [".venv/lib/python3.12/site-packages"]

preset = "all"
infer-return-types = "never"


# ==============================================================================
# TOOL: PYTEST (Global Settings)
# ==============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
env_files = "tests/.env.test"
env_override_existing_values = true
pythonpath = ["app", "tests"]
